# iankim.dev

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml  fly.toml.dev  start.sh
.github/workflows/: fly.yml
.obsidian/: workspace.json
blogs/: duty-to-drive.md  fayerabend-savior-of-science.md  reviving-ai-through-heidegger.md  seize-the-means-of-production.md
src/: lib.rs  main.rs
src/routes/: blog.rs  index.rs  mod.rs  ping.rs
static/: index.css  index.js
templates/: blog.html.tera  blog_list.html.tera  index.html.tera  layout.html.tera
