[package]
name = "iankim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["helmet", "uuid", "tera_templates"] }
serde = { version = "1.0.175", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
